--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="menuOptionMainRefresh">刷新</string>
     <string name="menuOptionMainAbout">关于</string>
     <string name="menuOptionMainExit">退出</string>
+
+    <string name="mainVideos">视频</string>
+    <string name="mainUnknownVideoDuration">未知长度</string>
+
+    <string name="playVideoNotExist">视频文件不存在，请检查路径是否正确。</string>
 </resources>
